@@ -241,11 +241,11 @@ def fs_load_nplayers_ini(filename):
     categories_dic = {}
     categories_set = set()
     __debug_do_list_categories = False
-    read_status = 0
-    # read_status FSM values
+    # --- read_status FSM values ---
     # 0 -> Looking for '[NPlayers]' tag
     # 1 -> Reading categories
     # 2 -> Categories finished. STOP
+    read_status = 0
     try:
         f = open(filename, 'rt')
     except IOError:
@@ -322,3 +322,134 @@ def fs_load_INI_datfile(filename):
     log_info('fs_load_INI_datfile() Number of categories {0:6d}'.format(len(ini_set)))
 
     return (ini_dic, ini_version)
+
+#
+# Loads History.dat
+# history_idx_dic = {
+#    'nes' : ['100mandk', '89denku', ...],
+#    'info' : ['88games', 'flagrall', ...],
+# }
+#
+def mame_load_History_DAT(filename):
+    log_info('mame_load_History_DAT() Parsing "{0}"'.format(filename))
+    history_idx_dic = {}
+    history_dic = {}
+    __debug_function = False
+
+    # --- read_status FSM values ---
+    # 0 -> Looking for '$(xxxx)=(machine_name),'
+    # 1 -> Looking for $bio
+    # 2 -> Reading information. If '$end' found go to 0.
+    read_status = 0
+
+    # >> Open file
+    try:
+        f = open(filename, 'rt')
+    except IOError:
+        log_info('mame_load_History_DAT() (IOError) opening "{0}"'.format(filename))
+        return ({}, {})
+
+    # >> Parse file
+    for file_line in f:
+        stripped_line = file_line.strip()
+        line_uni = stripped_line.decode('utf-8', 'replace')
+        if __debug_function: log_debug('Line "{0}"'.format(line_uni))
+        if read_status == 0:
+            # >> Skip comments: lines starting with '##'
+            if re.search(r'^##', line_uni):
+                continue
+            # >> Skip blanks
+            if line_uni == '': continue
+            # >> New machine history
+            m = re.search(r'^\$(.+?)=(.+?),', line_uni)
+            if m:
+                list_name = m.group(1)
+                machine_name = m.group(2)
+                if __debug_function: log_debug('List "{0}" / Machine "{1}"'.format(list_name, machine_name))
+                if list_name in history_idx_dic:
+                    history_idx_dic[list_name].append(machine_name)
+                else:
+                    history_idx_dic[list_name] = []
+                    history_idx_dic[list_name].append(machine_name)
+    f.close()
+    log_info('mame_load_History_DAT() Number of entries on index {0:6d}'.format(len(history_idx_dic)))
+
+    return (history_idx_dic, history_dic)
+
+#
+# Looks that mameinfo.dat has information for both machines and drivers.
+# Ignore driver information now.
+#
+# idx_set  = { 'info' : ['88games', 'flagrall', ...] }
+# data_dic = { '88games' : 'string', 'flagrall' : 'string', ... }
+#
+def mame_load_MameInfo_DAT(filename):
+    log_info('mame_load_MameInfo_DAT() Parsing "{0}"'.format(filename))
+    idx_dic = {}
+    data_dic = {}
+    __debug_function = False
+
+    # --- read_status FSM values ---
+    # 0 -> Looking for '$(xxxx)=(machine_name)'
+    # 1 -> Looking for $bio
+    # 2 -> Reading information. If '$end' found go to 0.
+    # 3 -> Ignoring information. If '$end' found go to 0.
+    read_status = 0
+
+    # >> Open file
+    try:
+        f = open(filename, 'rt')
+    except IOError:
+        log_info('mame_load_MameInfo_DAT() (IOError) opening "{0}"'.format(filename))
+        return ({}, {})
+
+    # >> Parse file
+    for file_line in f:
+        stripped_line = file_line.strip()
+        line_uni = stripped_line.decode('utf-8', 'replace')
+        # if __debug_function: log_debug('Line "{0}"'.format(line_uni))
+        if read_status == 0:
+            # >> Skip comments: lines starting with '#'
+            if re.search(r'^#', line_uni):
+                continue
+            if line_uni == '': continue
+            # >> New machine or driver information
+            m = re.search(r'^\$(.+?)=(.+?)$', line_uni)
+            if m:
+                list_name = m.group(1)
+                machine_name = m.group(2)
+                if __debug_function: log_debug('List "{0}" / Machine "{1}"'.format(list_name, machine_name))
+                if list_name in idx_dic:
+                    idx_dic[list_name].append(machine_name)
+                else:
+                    idx_dic[list_name] = []
+                    idx_dic[list_name].append(machine_name)
+                read_status = 1
+        elif read_status == 1:
+            if __debug_function: log_debug('Second line "{0}"'.format(line_uni))
+            if line_uni == '$mame':
+                read_status = 2
+                info_str_list = []
+            elif line_uni == '$drv':
+                read_status = 3
+            else:
+                raise TypeError('Wrong second line = "{0}"'.format(line_uni))
+        elif read_status == 2:
+            if line_uni == '$end':
+                data_dic[machine_name] = '\n'.join(info_str_list)
+                info_str_list = []
+                read_status = 0
+            else:
+                info_str_list.append(line_uni)
+        elif read_status == 3:
+            if line_uni == '$end':
+                read_status = 0
+            else:
+                pass
+        else:
+            raise TypeError('Wrong read_status = {0}'.format(read_status))
+    f.close()
+    log_info('mame_load_MameInfo_DAT() Number of entries on idx_dic  {0:6d}'.format(len(idx_dic)))
+    log_info('mame_load_MameInfo_DAT() Number of entries on data_dic {0:6d}'.format(len(data_dic)))
+
+    return (idx_dic, data_dic)
