@@ -1,5 +1,5 @@
 <settings>
-<category label="Paths">
+<category label="Paths and DATs">
     <setting id="separator" type="lsep" label="Mandatory paths" />
     <setting label="MAME executable" type="file"   id="mame_prog" />
     <setting label="MAME ROMs path"  type="folder" id="rom_path" source="auto" option="" />
@@ -11,12 +11,18 @@
     <setting label="Software Lists ROMs path" type="folder" id="SL_rom_path" source="auto" option="" />
     <setting label="Software Lists CHDs path" type="folder" id="SL_chd_path" source="auto" option="" />
     <setting label="Samples path"             type="folder" id="samples_path" source="auto" option="" />
+
+    <setting id="separator" type="lsep" label="Optional DATs" />
     <setting label="Catver.ini path"          type="file"   id="catver_path" />
     <setting label="Catlist.ini path"         type="file"   id="catlist_path" />
     <setting label="Genre.ini path"           type="file"   id="genre_path" />
     <setting label="nplayers.ini path"        type="file"   id="nplayers_path" />
     <setting label="bestgames.ini path"       type="file"   id="bestgames_path" />
     <setting label="series.ini path"          type="file"   id="series_path" />
+    <setting label="history.dat path"         type="file"   id="history_path" />
+    <setting label="mameinfo.dat path"        type="file"   id="mameinfo_path" />
+    <setting label="gameinit.dat path"        type="file"   id="gameinit_path" />
+    <setting label="command.dat path"         type="file"   id="command_path" />
 </category>
 <category label="ROM sets">
     <setting label="MAME ROM set" type="enum" id="mame_rom_set"  default="1" values="Merged|Split|Non-merged" />
